{
    "name": "WeaponControls",
    "maps": [
        {
            "name": "GunInputs",
            "id": "2e0690cd-c97d-4b62-9845-4fadeea1a2b7",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "a770111c-6133-41d6-adde-ea0a3935e89e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "538d73db-0ec4-424a-b582-a443cbc9962b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ShieldInputs",
            "id": "2daec7dc-a0f0-4787-a978-740532a54960",
            "actions": [
                {
                    "name": "ShieldBash",
                    "type": "Button",
                    "id": "33fad526-44de-488c-afba-f03fe32e9797",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BlockStart",
                    "type": "Button",
                    "id": "a3c2e99f-5c57-4e81-ae5a-4954211efa01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BlockEnd",
                    "type": "Button",
                    "id": "34529302-d3fe-4984-a655-f2f0310d1204",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2bd4e85c-9d19-40e6-8c19-d9e0f135f869",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BlockStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff89bf09-8cda-4337-a765-515cca70c066",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "BlockEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2deb9ba3-6142-4d3d-9cd6-b61bef07bf42",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShieldBash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SwordInputs",
            "id": "3406f3e5-4026-4684-8645-be411fcce537",
            "actions": [
                {
                    "name": "Swing",
                    "type": "Button",
                    "id": "17d880e3-2ef5-4469-b55c-8ee1a8beddf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39917a7e-32e8-459e-a4fd-ed0a71e26b46",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swing",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BananaInputs",
            "id": "0ffe825a-9c82-4a70-a729-35e39060211b",
            "actions": [
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "0205c9ea-06ad-43bb-9234-a96b9db6f518",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aafb7026-db7f-4e53-bc5a-d09f2a7c3fdc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BoomerangInputs",
            "id": "fe8f3493-ebb0-4f1a-8ef0-d9af38db4eb2",
            "actions": [
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "9850b0d0-4b0e-46af-a41a-0c0c86c1baaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6bd2a59-53e9-49aa-93dc-44b81e029ea7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}